--- a/WEB_CV_II/style.css
+++ b/WEB_CV_II/style.css
@@ -256,7 +256,12 @@ padding-right: 2rem;
   padding-left: 2rem;
 }
 
-
+header{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 
 
 
